fix(web): Visibility of randomized variations

--- a/src/main/interface/web-interface/src/App.css
+++ b/src/main/interface/web-interface/src/App.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    background-color: #1b1b1b;
+    background-color: #000000;
     color: #e0e0e0;
     font-family: 'Cinzel', serif;
 }
